--- a/src/index.ejs
+++ b/src/index.ejs
@@ -53,10 +53,10 @@
   <script type="systemjs-importmap">
     {
       "imports": {
-        "@practice-org/microfrontend-exercise-app-one":"//localhost:3001/practice-org-microfrontend-exercise-app-one.js",
-        "@practice-org/microfrontend-exercise-app-two":"//localhost:3002/practice-org-microfrontend-exercise-app-two.js",
+        "@practice-org/microfrontend-exercise-app-one":"//localhost:3001/micro1/practice-org-microfrontend-exercise-app-one.js",
+        "@practice-org/microfrontend-exercise-app-two":"//localhost:3001/micro2/practice-org-microfrontend-exercise-app-two.js",
         "@practice-org/microfrontend-exercise-app-three":"//localhost:3003/practice-org-microfrontend-exercise-app-three.js",
-        "@practice-org/microfrontend-pingfed-authentication":"//localhost:3004/practice-org-microfrontend-pingfed-authentication.js",
+        "@single-spa-test/app-react":"https://firebasestorage.googleapis.com/v0/b/android-chat-tamyg.appspot.com/o/single-spa-test-app-react.js?alt=media&token=b3fbf817-3c3e-460a-b8c6-ee640897c86a",
         "@practice-org/root-config": "//localhost:3000/practice-org-root-config.js"
       }
     }
